--- a/templates/showpatient.html
+++ b/templates/showpatient.html
@@ -43,8 +43,8 @@
         <tbody>
             {% for patient in data %}
                 <tr>
-                    <td>{{ patient.Name }}</td>
-                    <td>{{ patient.Result }}</td>
+                    <td>{{ patient.name }}</td>
+                    <td>{{ patient.result }}</td>
                 </tr>
             {% endfor %}
         </tbody>
