--- a/templates/index1.html
+++ b/templates/index1.html
@@ -74,7 +74,7 @@
     <h1>Health App</h1>
     <div class="options">
       <a href="/predict">Predict Diabetes</a>
-      <a href="/patients">Show Patients</a>
+      <a href="/patient">Show Patients</a>
     </div>
   </div>
 </body>
